# mesh-processor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
scripts/: httprequests.py
src/: CMakeLists.txt  main.cpp
src/ApiResponse/: ApiResponse.cpp  ApiResponse.h  CMakeLists.txt
src/MeshProcessorApp/: CMakeLists.txt  MeshProcessorApp.cpp  MeshProcessorApp.h
src/controllers/: CMakeLists.txt  IBaseController.h
src/controllers/HealthController/: CMakeLists.txt  HealthController.cpp  HealthController.h
src/controllers/TriangulationController/: CMakeLists.txt  TriangulationController.cpp  TriangulationController.h
src/services/: CMakeLists.txt
src/services/TriangulationService/: CMakeLists.txt  TriangulationService.cpp  TriangulationService.h
src/utils/: CMakeLists.txt
src/utils/JsonUtils/: CMakeLists.txt  JsonUtils.cpp  JsonUtils.h
src/utils/ResponseHandler/: CMakeLists.txt  ResponseHandler.cpp  ResponseHandler.h
test/: CMakeLists.txt
test/controllers/: CMakeLists.txt  HealthControllerTest.cpp  TriangulationControllerTest.cpp
test/services/: CMakeLists.txt  TriangulationServiceTest.cpp
test/utils/: CMakeLists.txt  JsonUtilsTest.cpp
